code-preview-enhancement

--- a/gpt-engineer/.gitignore
+++ b/gpt-engineer/.gitignore
@@ -93,7 +93,7 @@ webapp/.next/
 # locally saved datasets
 gpt_engineer/benchmark/benchmarks/apps/dataset
 gpt_engineer/benchmark/benchmarks/mbpp/dataset
-
+gpt_projects/
 gpt_engineer/benchmark/minimal_bench_config.toml
 
 test.json
